--- a/styles/style.css
+++ b/styles/style.css
@@ -3,9 +3,15 @@
     src: url('riskofRainFont/RiskofRainFont.ttf')
 }
 
+@font-face {
+    font-family: "rainFontBold";
+    src: url('RiskofRainSquare/RiskofRainSquare.ttf')
+}
+
 html, body {
     margin: 0px;
     height: 100%;
+    background-color: #252525;
     font-family: rainFont, Helvetica, sans-serif;
     text-align: center;
     color: white;
@@ -19,8 +25,17 @@ html, body {
 
 .titleBar {
     height: 80px;
-    background-color: #8a2be2;
+    background-color: #474747;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 } 
+
+.titleText {
+    font-family: rainFontBold;
+    font-stretch: expanded;
+    font-size: 200%;
+}
 
 .contentContainer {
     display: flex;
@@ -62,8 +77,8 @@ html, body {
 }
 
 .item:hover {
-    -webkit-filter: drop-shadow(0px 0px 10px #00000070 );
-    filter: drop-shadow(0px 0px 10px #00000070);
+    -webkit-filter: drop-shadow(0px 0px 20px #00000070 );
+    filter: drop-shadow(0px 0px 20px #0000002a);
     transition: all 150ms ease-in;
     transform: scale(1.5);
 }
@@ -78,6 +93,7 @@ html, body {
 }
 
 .infoTitle {
+    font-family: rainFontBold;
     font-size: 32px;
     color: white;
 }
@@ -137,4 +153,24 @@ html, body {
 
 .hidden {
     display: none;
+}
+
+.fadeOut {
+    opacity: 0;
+    animation: fadeOutAnim 0.2s;
+}
+
+.fadeIn {
+    opacity: 1;
+    animation: fadeInAnim 0.2s;
+}
+
+@keyframes fadeOutAnim {
+    0% { opacity: 1; }
+    100% { opacity: 0; }
+}
+
+@keyframes fadeInAnim {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
