--- a/styles/style.css
+++ b/styles/style.css
@@ -25,16 +25,32 @@ html, body {
 
 .titleBar {
     height: 80px;
+    padding-left: 2%;
+    padding-right: 2%;
     background-color: #474747;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
 } 
+
+.titleWrap {
+    display: flex;
+}
 
 .titleText {
     font-family: rainFontBold;
     font-stretch: expanded;
     font-size: 200%;
+}
+
+.search {
+    width: 20%;
+    height: 45px;
+    background-color: #252525;
+    font-family: rainFont;
+    color: white;
+    font-size: 100%;
+    border-width: 0px;
 }
 
 .contentContainer {
@@ -153,6 +169,10 @@ html, body {
 
 .hidden {
     display: none;
+}
+
+.faded {
+    opacity: 0.15;
 }
 
 .fadeOut {
