--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@ html, body {
     font-family: rainFont, Helvetica, sans-serif;
     text-align: center;
     color: white;
+    overflow: hidden;
 }
 
 .mainFlex {
@@ -23,10 +24,14 @@ html, body {
     height: 100%
 }
 
+.titleText {
+    font-family: rainFontBold;
+    font-stretch: expanded;
+    font-size: 200%;
+}
+
 .titleBar {
     height: 80px;
-    padding-left: 2%;
-    padding-right: 2%;
     background-color: #474747;
     display: flex;
     justify-content: space-between;
@@ -35,6 +40,9 @@ html, body {
 
 .titleWrap {
     display: flex;
+    padding-left: 0.5%;
+    padding-right: 0.5%;
+    align-items: center;
 }
 
 .search {
@@ -43,9 +51,30 @@ html, body {
     background-color: #252525;
     font-family: rainFont;
     color: white;
+    flex-grow: 1;
     font-size: 100%;
     border-width: 0px;
-    padding: 15px;
+    padding: 10px;
+}
+
+.clearButton {
+    z-index: 1;
+    cursor: pointer;
+    visibility: hidden;
+    margin-left: -37px;
+    width: 9%;
+    height: 9%;
+}
+
+.gearButton {
+    cursor: pointer;
+    margin-left: 3%;
+    width: 12%;
+    height: 12%;
+}
+
+.gearButton:hover {
+    animation: gearSpin 0.2s;
 }
 
 .contentContainer {
@@ -82,6 +111,7 @@ html, body {
     height: 80px;
     margin: 5px;
     padding: 5px;
+    cursor: pointer;
     transition: all 120ms ease-in;
     user-select: none;
     
@@ -121,6 +151,7 @@ html, body {
 
 .infoImage {
     filter: drop-shadow(0px 0px 20px #00000070);
+    flex-shrink: 0;
     width: 30%;
 }
 
@@ -153,6 +184,45 @@ html, body {
     padding: 15px;
 }
 
+.pageDim {
+    position: absolute;
+    visibility: hidden;
+    background-color: #000000ad;
+    left: 0px;
+    top: 0px;
+    height: 100%;
+    width: 100%;
+    animation: fadeOutAnim 0.5s;
+    transition: all 500ms ease-in;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.optionsPanel {
+    background-color: #393939;
+    border-color: #252525;
+    border-style: solid;
+    border-width: 5px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30%;
+}
+
+.closeOptions {
+    cursor: pointer;
+    width: 7%;
+    height: 7%;
+    margin-left: 91%;
+    margin-top: 1%;
+}
+
+.closeOptions:hover {
+    animation: buttonPulse 0.3s;
+}
+
 .select {
     filter: drop-shadow(0px 0px 15px #ffffff70);
     transform: scale(1.5);
@@ -163,6 +233,18 @@ html, body {
     filter: drop-shadow(0px 0px 15px #ffffff70);
 }
 
+.dividerLine {
+    background-color: #2a2a2a;
+    margin: 5px;
+    height: 2px;
+    width: 90%;
+}
+
+.link {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
 .gray {
     color: #7e7e7e;
     margin-top: 10px;
@@ -171,30 +253,46 @@ html, body {
 
 .white {
     border-color: #ffffff;
+    color: #ffffff;
 }
 
 .green {
     border-color: #93e180;
+    color: #93e180;
 }
 
 .red {
     border-color: #e7543a;
+    color: #e7543a;
 }
 
 .yellow {
     border-color: #ffff00;
+    color: #ffff00;
 }
 
 .orange {
     border-color: #ff8000;
+    color: #ff8000;
 }
 
 .purple {
     border-color: #ab6fbe;
+    color: #ab6fbe;
 }
 
 .hidden {
     display: none;
+}
+
+.unhideClear {
+    visibility: visible;
+    animation: clearButtonPulse 0.3s;
+}
+
+.unhideDim {
+    visibility: visible;
+    animation: fadeInAnim 0.5s;
 }
 
 .faded {
@@ -227,4 +325,24 @@ html, body {
     50% { transform: scale(1.8) }
     75% { transform: scale(1.4) }
     100% { transform: scale(1.5) }
+}
+
+@keyframes buttonPulse {
+    0% { transform: scale(1.0) }
+    25% { transform: scale(0.9) }
+    50% { transform: scale(1.1) }
+    75% { transform: scale(0.9) }
+    100% { transform: scale(1.0) }
+}
+
+@keyframes clearButtonPulse {
+    0% { transform: scale(0.0) }
+    50% { transform: scale(1.2) }
+    75% { transform: scale(0.8) }
+    100% { transform: scale(1.0) }
+}
+
+@keyframes gearSpin {
+    0% { transform: rotate(0deg) }
+    100% { transform: rotate(180deg) }
 }
