firefox formatting fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,6 @@ html, body {
 }
 
 .titleBar {
-    height: 80px;
     background-color: #474747;
     display: flex;
     justify-content: space-between;
@@ -51,7 +50,6 @@ html, body {
 
 .search {
     width: 20%;
-    height: 20%;
     background-color: #252525;
     font-family: rainFont;
     color: white;
@@ -66,15 +64,14 @@ html, body {
     cursor: pointer;
     visibility: hidden;
     margin-left: -37px;
+    margin-right: 0%;
     width: 9%;
-    height: 9%;
 }
 
 .gearButton {
     cursor: pointer;
     margin-left: 3%;
-    width: 12%;
-    height: 12%;
+    width: 9%;
 }
 
 .gearButton:hover {
@@ -111,6 +108,7 @@ html, body {
 
 .item {
     filter: drop-shadow(0px 0px 10px #00000070);
+    object-fit: contain;
     width: 7%;
     height: 7%;
     margin: 5px;
@@ -186,9 +184,11 @@ html, body {
 
 .infoVideo {
     padding: 15px;
+    width: 95%
 }
 
 .pageDim {
+    z-index: 1;
     position: absolute;
     visibility: hidden;
     background-color: #000000ad;
@@ -375,11 +375,15 @@ html, body {
         font-size: 150%;
     }
 
-    .gearButton {
-        margin-left: 12%;
+    .clearButton {
+        margin-left: -12%;
         margin-right: 2%;
-        width: 20%;
-        height: 20%;
+        width: 10%;
+    }
+
+    .gearButton {
+        width: 15%;
+        margin-right: 2%;
     }
 }
 
@@ -405,5 +409,19 @@ html, body {
 
     .itemPanel {
         width: 60%;
+    }
+}
+
+@-moz-document url-prefix() { 
+    .item {
+        height: unset;
+    }
+
+    .gearButton {
+        width: 13%;
+    }
+
+    .clearButton {
+        margin-right: 5%;
     }
 }
