--- a/styles/style.css
+++ b/styles/style.css
@@ -115,21 +115,36 @@ html, body {
 }
 
 .item {
-    filter: drop-shadow(0px 0px 10px #00000070);
+    position: relative;
     object-fit: contain;
     width: 7%;
-    height: 7%;
     margin: 5px;
-    padding: 5px;
     cursor: pointer;
+    filter: drop-shadow(0px 0px 10px #00000070);
     transition: all 120ms ease-in;
-    user-select: none;
-    
+    user-select: none; 
 }
 
 .item:hover {
     filter: drop-shadow(0px 0px 20px #0000002a);
     transform: scale(1.5);
+}
+
+.itemImg {
+    width: 100%;
+}
+
+.itemCap {
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    font-size: 22px;
+	text-shadow:
+		-3px -3px 0 #252525,
+		3px -3px 0 #252525,
+		-3px 3px 0 #252525,
+		3px 3px 0 #252525;
+    color: white;
 }
 
 .infoPanel {
@@ -526,6 +541,7 @@ input:checked + .toggle {
     -moz-transition: none;
     -o-transition: none;
     transition: none;
+    text-shadow: none;
     animation: none;
     filter: none;
 }
