--- a/styles/style.css
+++ b/styles/style.css
@@ -152,12 +152,12 @@ html, body {
 
 .infoPanel {
     width: 30%;
-    height: 100%;
     background-color: #252525;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: flex-start;
+    overflow-y: auto;
     font-size: 100%;
 }
 
@@ -210,7 +210,7 @@ html, body {
 
 .infoVideo {
     margin: 15px;
-    width: 95%;
+    width: 90%;
 }
 
 .pageDim {
