yarn.lock updates & css fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -228,6 +228,7 @@ html, body {
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow-y: auto;
 }
 
 .optionsPanel {
