--- a/src/components/InfoPanel/InfoPanel.module.css
+++ b/src/components/InfoPanel/InfoPanel.module.css
@@ -14,25 +14,32 @@
     justify-content: flex-start;
     overflow-y: auto;
     overflow-x: hidden;
-    font-size: 100%;
-    
+    font-size: 1em;
+}
+
+.closeButton {
+    width: 2em;
+    display: none;
+    align-self: flex-end;
+
 }
 
 .infoTitle {
     font-family: rainFontBold;
-    font-size: 32px;
+    font-size: 2em;
     color: white;
 }
 
 .infoSubtitle {
     color: #7e7e7e;
     margin-top: 2%;
-    /* margin-bottom: 1%; */
 }
 
 .infoImage {
-    filter: drop-shadow(0px 0px 20px #00000070);
+    filter: drop-shadow(0px 0px 20px #00000085);
     image-rendering: crisp-edges;
+    /* transition: all 120ms ease-in; */
+    animation: zoomIn 1s;
     flex-shrink: 0;
     width: 25%;
 }
@@ -40,3 +47,24 @@
 .spacer {
     flex: 1;
 }
+
+@keyframes zoomIn {
+    0% { 
+        transform: scale(0.95);
+        opacity: 0.2;
+    }
+    100% { 
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .infoPanel {
+        width: 100%;
+    }
+    
+    .closeButton {
+        display: block;
+    }
+} 
