--- a/src/components/ItemPanel/Item.module.css
+++ b/src/components/ItemPanel/Item.module.css
@@ -11,10 +11,10 @@
     transition: all 120ms ease-in;
 }
 
-.item:after {
+/* .item:after {
     content: "";
     display: block;
-}
+} */
 
 .itemImg {
     width: 100%;
@@ -46,7 +46,8 @@
     position: absolute;
     right: 0px;
     bottom: 0px;
-    font-size: 2vh;
+    /* font-size: 2vh; */
+    font-size: 1.5em;
     text-shadow:
     3px -3px 0 #252525, 
     3px 0px 0 #252525, 
