--- a/src/components/ItemPanel/ItemPanel.module.css
+++ b/src/components/ItemPanel/ItemPanel.module.css
@@ -22,3 +22,9 @@
     align-items: center;
     flex-direction: column;
 }
+
+@media only screen and (max-width: 600px) {
+    .itemPanel {
+        width: 100%;
+    }
+} 
