--- a/src/components/TitleBar/SearchBar.module.css
+++ b/src/components/TitleBar/SearchBar.module.css
@@ -8,10 +8,10 @@
     width: 100%;
     background-color: #252525;
     font-family: rainFont;
+    font-size: 0.8em;
     color: white;
-    font-size: 100%;
     border-width: 0px;
-    padding: 10px;
+    padding: 1em;
 }
 
 .clearButton {
