--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 0px;
   text-align: center;
   overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -16,12 +16,6 @@ code {
 
 #root {
   height: 100%;
-}
-
-.ror1-theme {
-  --main-color: red;
-}
-
-.ror2-theme {
-  --main-color: blue;
+  /* min-height: -webkit-fill-available; */
+  /* height: -moz-available; */
 }
