--- a/src/components/ItemPanel/Item.module.css
+++ b/src/components/ItemPanel/Item.module.css
@@ -26,7 +26,6 @@
     opacity: 0.15;
 }
 
-
 .item:hover {
     filter: drop-shadow(0px 0px 20px #0000005d);
     transform: scale(1.5);
@@ -46,8 +45,7 @@
     position: absolute;
     right: 0px;
     bottom: 0px;
-    /* font-size: 2vh; */
-    font-size: 1.5em;
+    font-size: 2.5vh;
     text-shadow:
     3px -3px 0 #252525, 
     3px 0px 0 #252525, 
